--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "^4.0",
         "klaravel/ntrust": "^1.1",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-activitylog": "^3.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
